<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.agadasom</groupId>
    <artifactId>hwplib</artifactId>
    <packaging>jar</packaging>
    <version>0.0.1</version>

    <name>HWP Library For Contempory Java</name>
    <description>Hancom 에서 개발한 HWP 포맷 파일에 접근할 수 있는 방법을 제공하는 라이브러리. https://github.com/neolord0 에서 개발된 소스에서 Apache 재단의 POI 부분을 외부 라이브러리로 분리하고 java jdk 버전을 17에 맞춰 재코딩하려는 시도임. </description>
    <url>https://github.com/JuanPionero/hwplib</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <licenses>
        <license>
            <name>apache-2.0</name>
            <url>https://opensource.org/licenses/Apache-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/JuanPionero/hwplib</url>
        <connection>scm:git:git://github.com/JuanPionero/hwplib.git</connection>
    </scm>

    <developers>
         <developer>
            <email>juanlee0@naver.com</email>
            <name>SeungHoon Lee</name>
            <url>https://github.com/JuanPionero</url>
            <id>juanlee0</id>
            <roles>
                     <role>developer</role>                     
            </roles>
        </developer>
        <developer>
            <email>neolord@hanmail.net</email>
            <name>Park.sungkyon</name>
            <url>https://github.com/neolord0</url>
            <id>neolord0</id>
            <roles>
                     <role>starter</role>                     
            </roles>
        </developer>         
    </developers>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
        <!-- 원작자의 소스코드에 내포된 poi 걷어내기 -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.4.1</version>
        </dependency>
    </dependencies>

    <profiles>        
        <profile>
            <id>jdk-17</id>
            <activation>
                <jdk>[9,)</jdk> <!-- Includes 11 and above -->
            </activation>
            <dependencies>
                <dependency>
                    <groupId>javax.xml.bind</groupId>
                    <artifactId>jaxb-api</artifactId>
                    <version>2.3.1</version>
                </dependency>
                <dependency>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-core</artifactId>
                    <version>2.3.0</version>
                </dependency>
                <dependency>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-impl</artifactId>
                    <version>2.3.0</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <plugins>
            <!-- compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version> <!--default compile version-->
                <configuration>
                    <excludes>
                        <exclude>**/sample/**</exclude>
                    </excludes>
                    <source>17</source>
                    <target>17</target>
                    <compilerVersion>17</compilerVersion>
                </configuration>
            </plugin>
            <!-- make jar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version> <!-- default version-->
                <configuration>
                    <excludes>
                        <exclude>**/sample/**</exclude>
                        <exclude>**/*.iml</exclude>
                        <exclude>**/*.hwp</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- maven -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <!-- <version>2.3</version> -->
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- make javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <!-- <version>3.6.3</version> -->
                <configuration>
                    <doclint>none</doclint>
                    <additionalOptions>
                        <additionalOption>-html5</additionalOption>
                    </additionalOptions>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- pgp 서명 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <!-- <version>1.6</version> -->
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- publish -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <!-- <version>0.7.0</version> -->
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <name>Central Portal Snapshots</name>
            <id>central-portal-snapshots</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

</project>
